--- a/package.json
+++ b/package.json
@@ -44,10 +44,11 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "geist": "^1.3.1",
+    "html2pdf.js": "^0.11.2",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "mssql": "latest",
-    "next": "14.2.16",
+    "next": "^14.2.32",
     "next-themes": "^0.4.4",
     "pg": "latest",
     "pg-native": "latest",
