--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "mssql": "latest",
     "next": "^14.2.32",
     "next-themes": "^0.4.4",
+    "pdf-lib": "^1.17.1",
     "pg": "latest",
     "pg-native": "latest",
     "react": "^18",
