--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
-DB_USER=Stage
-DB_PASSWORD=Sapphire123
-DB_SERVER=192.168.1.28
+DB_USER=NODP
+DB_PASSWORD=Prod123
+DB_SERVER=172.16.17.32
 DB_NAME=Stage
